# PrataTasks

./: .gitignore  README.md
Chapter_10/: CMakeLists.txt  bankAccount.cpp  bankAccount.h  golf.cpp  golf.h  list.cpp  list.h  move.cpp  move.h  person.cpp  person.h  plorg.cpp  plorg.h  sales.cpp  sales.h  stack.cpp  stack.h  task_10_1.cpp  task_10_2.cpp  task_10_3.cpp  task_10_4.cpp  task_10_5.cpp  task_10_6.cpp  task_10_7.cpp  task_10_8.cpp
Chapter_11/: CMakeLists.txt  complex0.cpp  complex0.h  mytime3.cpp  mytime3.h  randwalk.txt  stonewt.cpp  stonewt.h  stonewt6.cpp  stonewt6.h  task_11_1.cpp  task_11_2.cpp  task_11_3.cpp  task_11_4.cpp  task_11_5.cpp  task_11_6.cpp  task_11_7.cpp  vect.cpp  vect.h  vect2.cpp  vect2.h
Chapter_12/: CMakeLists.txt  Cow.cpp  Cow.h  queue.cpp  queue.h  stack.cpp  stack.h  stock3.cpp  stock3.h  string2.cpp  string2.h  task_12_1.cpp  task_12_2.cpp  task_12_3.cpp  task_12_4.cpp  task_12_5.cpp  task_12_6.cpp
Chapter_13/: CMakeLists.txt  cd.cpp  cd.h  cd2.cpp  cd2.h  classic.cpp  classic.h  classic2.cpp  classic2.h  dma.cpp  dma.h  port.cpp  port.h  task_13_1.cpp  task_13_2.cpp  task_13_3.cpp  task_13_4.cpp  usebrass2.cpp  vintagePort.cpp  vintagePort.h
Chapter_14/: CMakeLists.txt  emp.cpp  emp.h  pair.h  personmi.cpp  personmi.h  queuetp.h  task_14_1.cpp  task_14_2.cpp  task_14_3.cpp  task_14_4.cpp  task_14_5.cpp  winec.cpp  winec.h  winei.cpp  winei.h  workermi.cpp  workermi.h
Chapter_15/: CMakeLists.txt  exc_mean_2.h  exc_mean_3.h  sales.cpp  sales.h  task_15_1.cpp  task_15_2.cpp  task_15_3.cpp  task_15_4.cpp  tv.cpp  tv.h
Chapter_16/: CMakeLists.txt  hangman.txt  task_16_1.cpp  task_16_10.cpp  task_16_2.cpp  task_16_3.cpp  task_16_4.cpp  task_16_5.cpp  task_16_6.cpp  task_16_7.cpp  task_16_8.cpp  task_16_9.cpp
Chapter_17/: CMakeLists.txt  emp.cpp  emp.h  employees.txt  out.txt  task_17_1.cpp  task_17_2.cpp  task_17_3.cpp  task_17_4.cpp  task_17_5.cpp  task_17_6.cpp  task_17_7.cpp
Chapter_18/: CMakeLists.txt  task_18_1.cpp  task_18_2.cpp  task_18_3.cpp  task_18_4.cpp
Chapter_2/: CMakeLists.txt  task_2_1.cpp  task_2_2.cpp  task_2_3.cpp  task_2_4.cpp  task_2_5.cpp  task_2_6.cpp  task_2_7.cpp
Chapter_3/: CMakeLists.txt  task_3_1.cpp  task_3_2.cpp  task_3_3.cpp  task_3_4.cpp  task_3_5.cpp  task_3_6.cpp  task_3_7.cpp
Chapter_4/: CMakeLists.txt  task_4_1.cpp  task_4_10.cpp  task_4_2.cpp  task_4_3.cpp  task_4_4.cpp  task_4_5.cpp  task_4_6.cpp  task_4_7.cpp  task_4_8.cpp  task_4_9.cpp
Chapter_5/: CMakeLists.txt  task_5_1.cpp  task_5_10.cpp  task_5_2.cpp  task_5_3.cpp  task_5_4.cpp  task_5_5.cpp  task_5_6.cpp  task_5_7.cpp  task_5_8.cpp  task_5_9.cpp
Chapter_6/: CMakeLists.txt  task_6_1.cpp  task_6_2.cpp  task_6_3.cpp  task_6_4.cpp  task_6_5.cpp  task_6_6.cpp  task_6_7.cpp  task_6_8.cpp  task_6_9.cpp
Chapter_7/: CMakeLists.txt  task_7_1.cpp  task_7_10.cpp  task_7_2.cpp  task_7_3.cpp  task_7_4.cpp  task_7_5.cpp  task_7_6.cpp  task_7_7.cpp  task_7_8a.cpp  task_7_8b.cpp  task_7_9.cpp
Chapter_8/: CMakeLists.txt  task_8_1.cpp  task_8_2.cpp  task_8_3.cpp  task_8_4.cpp  task_8_5.cpp  task_8_6.cpp  task_8_7.cpp
Chapter_9/: CMakeLists.txt  golf.cpp  golf.h  sales.cpp  sales.h  task_9_1.cpp  task_9_2.cpp  task_9_3.cpp  task_9_4.cpp
