project(Chapter_10)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. APP_SOURCES)

add_executable( task_10_1 task_10_1.cpp bankAccount.cpp )
add_executable( task_10_2 task_10_2.cpp person.cpp )
add_executable( task_10_3 task_10_3.cpp golf.cpp )
add_executable( task_10_4 task_10_4.cpp sales.cpp )
add_executable( task_10_5 task_10_5.cpp stack.cpp )
add_executable( task_10_6 task_10_6.cpp move.cpp )
add_executable( task_10_7 task_10_7.cpp plorg.cpp )
add_executable( task_10_8 task_10_8.cpp list.cpp )

add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
